# todo-fastapi-sqlalchemy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_test.yml
hooks/: run_mypy.sh  update_requirements.sh
src/: main.py  settings.py
src/api/: exceptions.py  health.py  permissions.py  users.py
src/api/routes/: auth.py  health.py  todos.py  users.py
src/api/schemas/: auth.py  health.py  todos.py  users.py
src/db/: base.py  database.py  dependency.py  models.py
tests/api/: conftest.py  test_auth.py  test_permissions.py  test_todos.py  test_users.py
tests/api/fixtures/: permissions_fixtures.py  todos_fixtures.py  users_fixtures.py
tests/api/health/: test_health.py
tests/api/utils/: todos.py  tokens.py
